--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <li class="nav-items fonts"><a href="resource-tracker">Resource Tracker</a></li>
     </ul>
 </nav>
-  
+  <script src="app.js"></script>
 </body>
 </html>
