--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 </head>
 <body>
   
-  <main class="home view">
+  <main id="home" class="home">
   <!-- Heading -->
-  <h1 class="heading fonts view">Student Tracker</h1>
+  <h1 class="heading fonts">Student Tracker</h1>
      <!-- Navbar layout -->
-    <nav class="navbar fonts view">
+    <nav class="navbar fonts">
       <ul class="nav-list fonts">
-        <li class="nav-items fonts"><a href="#" data-view="tasks">Task Manager</a></li>
+        <li class="nav-items fonts"><a href="#task-manager">Task Manager</a></li>
 
-        <li class="nav-items fonts"><a href="#" data-view="Pomodoro">Pomodoro</a></li>
+        <li class="nav-items fonts"><a href="#pomodoro">Pomodoro</a></li>
 
-        <li class="nav-items fonts"><a href="#" data-view="resource-tracker">Resource Tracker</a></li>
+        <li class="nav-items fonts"><a href="#resource-tracker">Resource Tracker</a></li>
       </ul>
     </nav>
    </main>
@@ -29,7 +29,7 @@
 
   <!-- Task Manager -->
    
-  <section class="task-manager">
+  <section id="task-manager" class="task-manager hidden">
     <h2 class="fonts">Task Manager</h2>
     <p class="fonts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora voluptate obcaecati quidem voluptatum tenetur maiores adipisci!</p>
     <div class="buttons">
