--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   
-  <main id="home" class="home">
+  <main id="home" class="home view">
   <!-- Heading -->
   <h1 class="heading fonts">Student Tracker</h1>
      <!-- Navbar layout -->
@@ -21,7 +21,7 @@
 
         <li class="nav-items fonts"><a href="#pomodoro">Pomodoro</a></li>
 
-        <li class="nav-items fonts"><a href="#resource-tracker">Resource Tracker</a></li>
+        <li class="nav-items fonts"><a href="#resource-fetcher">Resource Tracker</a></li>
       </ul>
     </nav>
    </main>
@@ -29,7 +29,7 @@
 
   <!-- Task Manager -->
    
-  <section id="task-manager" class="task-manager hidden">
+  <section id="task-manager" class="task-manager view hidden">
     <h2 class="fonts">Task Manager</h2>
     <p class="fonts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora voluptate obcaecati quidem voluptatum tenetur maiores adipisci!</p>
     <div class="buttons">
@@ -38,6 +38,13 @@
       <button class="style-button-update">Update a Task</button>
     </div>
   </section>
+
+  <!-- Pomodoro -->
+
+  <section id="pomodoro" class="pomodoro view hidden"></section>
+
+  <!-- Resource Fetcher -->
+   <section id="resource-fetcher" class="resource-fetcher view hidden"></section>
 
 
   <script src="app.js"></script>
